Add initial entities and configuration for ManagerApi, including user, project, task, bug, and related entities

--- a/Api/ManagerApi/appsettings.json
+++ b/Api/ManagerApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ManagerDatabase": "Server=localhost;Database=GmaSoftManager;Trusted_Connection=False;User ID=sa;Password=261194;TrustServerCertificate=true"
+  }
 }
