--- a/Api/ManagerApi/appsettings.json
+++ b/Api/ManagerApi/appsettings.json
@@ -6,6 +6,12 @@
     }
   },
   "AllowedHosts": "*",
+  "JwtSettings": {
+    "Key": "YourSuperSecretKeyHere_MustBeAtLeast32CharactersLong",
+    "Issuer": "GmaSoftManagerApi",
+    "Audience": "GmaSoftManagerClient",
+    "DurationInMinutes": 60
+  },
   "ConnectionStrings": {
     "ManagerDatabase": "Server=localhost;Database=GmaSoftManager;Trusted_Connection=False;User ID=sa;Password=261194;TrustServerCertificate=true"
   }
